--- a/ziptasticwebsite/templates/index.html
+++ b/ziptasticwebsite/templates/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
 
-<link rel="stylesheet" href="css/layouts/side-menu.css">
+<link rel="stylesheet" href="../static/css/layouts/side-menu.css">
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
 
@@ -62,7 +62,7 @@
 </script>
 
 
-<script src="js/ui.js"></script>
+<script src="../static/js/ui.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </head>
 <body>
