--- a/css/layouts/side-menu.css
+++ b/css/layouts/side-menu.css
@@ -73,6 +73,9 @@ The content `<div>` is where all your content goes.
 
 ul { list-style: none; }
 
+.hide {
+    display: none;
+}
 /* -- Dynamic Button For Responsive Menu -------------------------------------*/
 
 /*
