Update and sync with production

--- a/ziptasticwebsite/templates/index.html
+++ b/ziptasticwebsite/templates/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
 
-<link rel="stylesheet" href="../static/css/layouts/side-menu.css">
+<link rel="stylesheet" href="css/layouts/side-menu.css">
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
 
@@ -62,7 +62,7 @@
 </script>
 
 
-<script src="../static/js/ui.js"></script>
+<script src="js/ui.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </head>
 <body>
@@ -76,8 +76,8 @@
         </div>
 
         <div class="content">
-            <div id="subscribed"><h2 class="button-success">Thanks for subscribing!</h2></div>
-            <div id="paid"><h2 class="button-success">Thanks for giving!</h2></div>
+            <div id="subscribed" class="hide"><h2 class="button-success">Thanks for subscribing!</h2></div>
+            <div id="paid"  class="hide"><h2 class="button-success">Thanks for giving!</h2></div>
             <h2 class="content-subhead">What <span class="blue">is</span> Ziptastic?</h2>
             <p>
                 Ziptastic is a simple API service that allows people to ask which Country, State, County and City are associated with a <em>postal code</em>.
