--- a/ziptasticwebsite/templates/dashboard.html
+++ b/ziptasticwebsite/templates/dashboard.html
@@ -1,5 +1,6 @@
 <h1>Dashboard</h1>
-
+<h3>Welcome {{ welcome }}</h3>
 <h3>Usage</h3>
+{{ user }}
 <h3>API Key Management</h3>
 <h3>Billing & Cancellation</h3>
