--- a/ziptasticwebsite/templates/index.html
+++ b/ziptasticwebsite/templates/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
 
-<link rel="stylesheet" href="css/layouts/side-menu.css">
+<link rel="stylesheet" href="../static/css/layouts/side-menu.css">
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
 
@@ -168,10 +168,6 @@ Response:
                 </ul>
               </div>
             </div>
-
-
-
-
 
 
             <div class="pure-g-r">
